<resources>

	<!-- Activity Names -->
	<string name="app_name">Baseball Manager</string>
	<string name="league_activity">Leagues</string>
	<string name="game_activity">Games</string>
	<string name="team_activity">Teams</string>
	<string name="player_activity">Players</string>
	<string name="player_information">Players Info</string>
	<string name="team_information">Team Info</string>
	<string name="new_activity_form">New Team</string>
	<string name="new_activity_form_player">New Player</string>
	<string name="my_team">My Team</string>
	<string name="edit_team">Edit Team</string>

	<!-- Activity Settings -->
	<string name="action_settings">Settings</string>
	<string name="action_edit">Edit</string>
	<string name="action_new_player">New Player</string>
	<string name="action_search">Search</string>

	<!-- My Team -->
	<string name="my_phone">Phone:</string>
	<string name="my_email">E-mail:</string>
	<string name="coach_name">Coach:</string>
	<string name="add_free_agents">Add Free Agents</string>
	<string name="create_new_team">Create New Team</string>
	<string name="dialog_setup_team_title">Team setup</string>
	<string name="dialog_setup_team_message">Would you like to setup your team now?</string>

	<!-- Team Form -->
	<string name="form_hint_team_name">*Team Name</string>
	<string name="create_team">Create Team</string>
	<string name="add_players">+Add Players</string>

	<!-- Team Information -->
	<string name="record">Record</string>
	<string name="roster">Roster</string>
	<string name="win">Wins:</string>
	<string name="lose">Losses:</string>
	<string name="game_history">Game History</string>

	<!-- Player Form -->
	<string name="new_player">Add New Player</string>
	<string name="add_new_field">+Add more</string>
	<string name="form_hint_player_name">*Name</string>
	<string name="form_hint_player_number">*Number</string>
	<string name="number_players">Players:</string>
	<string name="spinner_position_title">Choose position</string>
	<string name="error_player_form_empty">Please fill in all the fields</string>
	<string name="error_player_number_exists">Number already exists in team</string>
	<string name="no_position_selected">position not set</string>

	<!-- Player Information -->
	<string name="player_info_number">Number:</string>
	<string name="player_info_team">Team:</string>
	<string name="player_info_position">Position:</string>
	<string name="player_info_bats">Bats:</string>
	<string name="player_info_throws">Throws:</string>
	<string name="player_info_batting">Batting</string>
	<string name="player_info_fielding">Fielding</string>
	<string name="player_info_hint_avg">Batting Average</string>
	<string name="player_info_hint_rbi">Runs Brought In</string>
	<string name="player_info_hint_runs">Runs Scored</string>
	<string name="player_info_hint_hits">Total Hits</string>
	<string name="player_info_hint_strikeouts">Total Strikeouts</string>
	<string name="player_info_hint_walks">Total Walks</string>
	<string name="player_info_hint_single">Singles</string>
	<string name="player_info_hint_double">Doubles</string>
	<string name="player_info_hint_triple">Triples</string>
	<string name="player_info_hint_home_run">Home Runs</string>
	<string name="player_info_hint_fb">Fly Balls</string>
	<string name="player_info_hint_gb">Ground Balls</string>
	<string name="player_info_hint_obp">On Base Percentage</string>
	<string name="player_info_hint_bases_stolen">Bases Stolen</string>
	<string name="player_info_hint_caught_stealing">Caught Stealing</string>
	<string name="player_info_hint_errors">Fielding Errors</string>
	<string name="player_info_hint_fpct">Fielding Percentage</string>
	<string name="player_info_hint_put_outs">Put outs</string>

	<!-- New Coach Form -->
	<string name="form_coach_name">*Your name</string>
	<string name="form_coach_email">Your email</string>
	<string name="form_coach_phone">Your phone</string>
	<string name="form_coach_team">*Team name</string>
	<string name="form_coach_done">Done</string>
	<string name="error_empty_name">Please enter your name</string>
	<string name="error_empty_team">Please enter a team name</string>

	<!-- Picture Descriptions -->
	<string name="team_picture">team picture</string>
	<string name="player_picture">player picture</string>
	<string name="black_fade">black fade</string>
	<string name="baseball_silhouette">baseball icons</string>

	<!-- Universal Variables -->
	<string name="add">Add</string>
	<string name="delete">Delete</string>
	<string name="cancel">Cancel</string>
	<string name="search_hint">Search Players or Teams</string>
	<string name="ok">OK</string>
	<string name="n_a">n/a</string>
	<string name="sign_in">Sign in</string>
	<string name="yes">Yes</string>
	<string name="later">Later</string>


	<!--

		<!- Activity names
		<string name="league_title">League Manager</string>
		<string name="new_player_title">New Player</string>
		<string name="new_team_title">New Team</string>
		<string name="search_title">Search</string>
		<string name="team_information_title">Team Information</string>
		<string name="score_keeper">Score Keeper</string>
		<string name="add_player">Add Players</string>

		<!- Menus


		<!- Universal Variables -
		<string name="edit_player">Edit Player</string>
		<string name="search_filter">Filter:</string>
		<string name="teams">Teams</string>
		<string name="players">Players</string>
		<string name="free_agents">Free Agents</string>
		<string name="all">All</string>
		<string name="team">Team</string>
		<string name="sign_in">Sign in</string>
		<string name="rank">Rank:</string>
		<string name="position_optional">Position</string>
		<string name="select_a_team">Select a team</string>

		<!- Edit Player Form -
		<string name="edit_player_name">Player:</string>
		<string name="edit_player_number">Player Number:</string>
		<string name="edit_player_position">Player Position:</string>

		<!- Edit Team Form
		<string name="edit_team_name">Team Name:</string>
		<string name="edit_team_name_hint">Enter team name</string>
		<string name="edit_team_coach_name_hint">Enter coach\'s name</string>
		<string name="edit_team_name_change_hint">Updating the Team Name, will update all the player\'s on the team</string>
		<string name="edit_team">Edit Team</string>
		<string name="edit_remove_player_title">Removing players</string>
		<string name="edit_remove_player_message">Removing playings from the team will make them free agents.\nAre you sure you want to remove them?</string>

		<!- Player team form
		<string name="spinner_choose_team">Choose a team</string>

		<!- Team Form
		<string name="team_form_hint_player_name">*Players name</string>
		<string name="team_form_hint_player_number">*Player #</string>
		<string name="toast_error_team">Please fill in all the fields</string>
		<string name="label_optional">(Optional)</string>
		<string name="toast_error_empty_fields">ERROR: DELETE or FILL the empty fields that you have created</string>
		<string name="error_duplicate_name_in_form">There is a duplicate name</string>
		<string name="error_duplicate_number_in_form">There is a duplicate number</string>
		<string name="error_team_exist">Team already exists</string>


	-->
</resources>
