<LinearLayout
	android:id="@+id/new_player_field"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp">

		<EditText
			android:id="@+id/form_player_name"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:layout_marginEnd="10dp"
			android:layout_marginRight="10dp"
			android:layout_weight="1"
			android:background="@color/white"
			android:hint="@string/form_hint_player_name"
			android:inputType="textCapWords|textMultiLine"
			android:padding="12dp"/>

		<Button
			android:id="@+id/remove_field"
			android:layout_width="wrap_content"
			android:layout_height="30dp"
			android:layout_gravity="center_vertical"
			android:background="@drawable/no_button"
			android:text="@string/delete"
			android:textAllCaps="false"
			android:textColor="@color/white"
			android:textSize="14sp"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginStart="10dp"
		android:orientation="horizontal"
		android:weightSum="1">

		<EditText
			android:id="@+id/form_player_number"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="10dp"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="10dp"
			android:layout_marginStart="0dp"
			android:layout_weight=".4"
			android:background="@color/white"
			android:ems="15"
			android:hint="@string/form_hint_player_number"
			android:inputType="number"
			android:padding="12dp"/>

		<Button
			android:id="@+id/spinner_pos"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_weight=".6"
			android:background="@android:drawable/btn_dropdown"
			android:text="@string/spinner_position_title"
			android:textAllCaps="false"/>

	</LinearLayout>

	<View
		android:layout_width="fill_parent"
		android:layout_height="3dp"
		android:layout_marginTop="10dp"
		android:background="#009688"/>

</LinearLayout>