<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<FrameLayout
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:layout_marginBottom="10dp">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:scaleType="centerCrop"
					android:contentDescription="@string/team_picture"
					android:src="@drawable/team"/>

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/black_fade_out"
					android:contentDescription="@string/black_fade"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="10dp">

					<TextView
						android:id="@+id/my_team_name"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/white"
						android:textSize="25sp"
						android:textStyle="bold|italic"/>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="3dp">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginEnd="5dp"
							android:layout_marginRight="5dp"
							android:text="@string/coach_name"
							android:textColor="@color/white"
							android:textSize="15sp"/>

						<TextView
							android:id="@+id/my_coach_name"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textColor="@color/white"
							android:textSize="15sp"/>

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="3dp">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginEnd="5dp"
							android:layout_marginRight="5dp"
							android:text="@string/my_phone"
							android:textColor="@color/white"
							android:textSize="15sp"/>

						<TextView
							android:id="@+id/my_phone"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textColor="@color/white"
							android:textSize="15sp"/>

					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginEnd="5dp"
							android:layout_marginRight="5dp"
							android:text="@string/my_email"
							android:textColor="@color/white"
							android:textSize="15sp"/>

						<TextView
							android:id="@+id/my_email"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:textColor="@color/white"
							android:textSize="15sp"/>

					</LinearLayout>

				</LinearLayout>

			</FrameLayout>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginEnd="10dp"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:layout_marginStart="10dp"
					android:orientation="horizontal">

					<TextView
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="start"
						android:text="@string/roster"
						android:textColor="@color/black"
						android:textSize="20sp"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/my_team_total_players"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="end"
						android:textColor="@color/black"
						android:textSize="15sp"/>

				</LinearLayout>

				<View
					android:layout_width="fill_parent"
					android:layout_height="3dp"
					android:layout_marginTop="0dp"
					android:background="@color/ColorPrimaryLight"/>

			</LinearLayout>

		</LinearLayout>

	</FrameLayout>

</LinearLayout>